syntax = "proto3";

package heimdall.types;

import "gogoproto/gogo.proto";

option go_package = "github.com/maticnetwork/heimdall/types";

option (gogoproto.sizer_all)       = false;
option (gogoproto.marshaler_all)   = false;
option (gogoproto.unmarshaler_all) = false;

message DividendAccount {
    option (gogoproto.goproto_getters)  = false;
    option (gogoproto.goproto_stringer) = false;

    bytes user = 1
        [(gogoproto.casttype) =
             "github.com/maticnetwork/heimdall/types/common.HeimdallAddress"];
    string fee_amount = 2;
}
